Docs: Synchronized README and Dashboard UI with Architecture v3.0

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="bg-slate-50 text-slate-900 font-[Inter]">
     <nav class="bg-indigo-700 text-white p-4 shadow-lg">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-xl font-bold tracking-tight">🔍 WA Clark Medicaid Spend Watch <span class="text-indigo-200 text-sm ml-2">v2.0 Beta</span></h1>
-            <div class="text-sm bg-indigo-800 px-3 py-1 rounded-full border border-indigo-600">Civic Oversight Tool</div>
+            <h1 class="text-xl font-bold tracking-tight">🔍 WA Medicaid Spend Watch <span
+                    class="text-indigo-200 text-sm ml-2">v3.0 Alpha (Portable)</span></h1>
+            <div class="text-sm bg-indigo-800 px-3 py-1 rounded-full border border-indigo-600">Civic Oversight Tool
+            </div>
         </div>
     </nav>
 
@@ -20,15 +24,18 @@
         <!-- Stats Row -->
         <div id="stats-row" class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
             <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-200">
-                <div class="text-slate-500 text-sm font-semibold uppercase tracking-wider mb-1">Total Analyzed Spend</div>
+                <div class="text-slate-500 text-sm font-semibold uppercase tracking-wider mb-1">Total Analyzed Spend
+                </div>
                 <div id="total-spend" class="text-3xl font-bold text-slate-800">$0</div>
             </div>
             <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-200">
-                <div class="text-slate-500 text-sm font-semibold uppercase tracking-wider mb-1">Providers Monitored</div>
+                <div class="text-slate-500 text-sm font-semibold uppercase tracking-wider mb-1">Providers Monitored
+                </div>
                 <div id="total-providers" class="text-3xl font-bold text-slate-800">0</div>
             </div>
             <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-200">
-                <div class="text-slate-500 text-sm font-semibold uppercase tracking-wider mb-1">Risk Anomalies Found</div>
+                <div class="text-slate-500 text-sm font-semibold uppercase tracking-wider mb-1">Risk Anomalies Found
+                </div>
                 <div id="total-flags" class="text-3xl font-bold text-rose-600">0</div>
             </div>
         </div>
@@ -50,18 +57,22 @@
 
             <!-- Main Content: Provider Detail -->
             <div class="lg:col-span-2">
-                <div id="detail-view" class="bg-white rounded-xl shadow-sm border border-slate-200 p-8 min-h-[600px] flex flex-col justify-center items-center text-slate-400">
+                <div id="detail-view"
+                    class="bg-white rounded-xl shadow-sm border border-slate-200 p-8 min-h-[600px] flex flex-col justify-center items-center text-slate-400">
                     <div class="text-6xl mb-4">🩺</div>
-                    <p class="text-lg">Select a provider from the sidebar to view detailed anomaly signals and spending trends.</p>
+                    <p class="text-lg">Select a provider from the sidebar to view detailed anomaly signals and spending
+                        trends.</p>
                 </div>
             </div>
         </div>
     </main>
 
     <footer class="container mx-auto py-8 border-t border-slate-200 mt-12 text-center text-slate-400 text-sm">
-        <p>This tool surfaces statistical anomalies for civic oversight. It does not prove fraud. Based on HHS MACFin public data.</p>
+        <p>This tool surfaces statistical anomalies for civic oversight. It does not prove fraud. Based on HHS MACFin
+            public data.</p>
     </footer>
 
     <script src="app.js"></script>
 </body>
+
 </html>
